--- a/style/style.css
+++ b/style/style.css
@@ -32,6 +32,10 @@ h2
 {
     text-align: center;
 }
+footer
+{
+    text-align: center;
+}
 /*nav a {*/
 /*    padding: 15px;*/
 /*    padding-bottom:4px;*/
